Fix jagged edges on iOS
:mag: The image rotation produced jagged edges on iOS devices. 

Manually activating optimizations with `will-change` and adding a transparent border smoothes out the edges.

--- a/assets/scss/_profile.scss
+++ b/assets/scss/_profile.scss
@@ -284,6 +284,10 @@
           right: -15px;
           top: -20px;
           border: none;
+
+          /* antialiasing */
+          outline: 1px solid transparent;
+          will-change: transform;
         }
       }
 
